--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <!-- d-flex align-items-center  -->
         <div class="center-heading">
             <!-- <img class="bg-image" src="images/bg-image-0.jpg" alt=""> -->
-            <h1 class="main-heading">Welcome to <span class="footstep-brand">FootStep</span> <span
-                    class="travels">Travels</span></h1>
+            <h1 class="main-heading">Welcome to <span id="footstepbrand">FootStep</span> <span
+                    id="travel">Travels</span></h1>
             <h2 class="secondary-heading">Visit <span class="fav-country"></span></h2>
             <button id="booknow">Book Now</button>
         </div>
