--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 
     <!-- Header and Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <nav class="navbar navbar-expand-lg navbar-light px-2 ">
         <div class="container-fluid">
             <!-- DreamLand -->
             <!-- <a class="navbar-brand" href="#"> <img src="images/Dreamland-logos-removebg-preview.png" alt=""></a> -->
@@ -104,7 +104,7 @@
     <section id="book-now-section" class="container">
         <div class="row">
             <div id="form-image" class="col">
-                <img src="/images/FT_logo-removebg-preview-original.png" alt="FT brand">
+                <img src="images/FT_logo-removebg-preview-original.png" alt="FT brand">
             </div>
 
             <div id="book-now-form" class="col">
@@ -117,11 +117,11 @@
                             <label for="exampleFormControlSelect1">Where to</label>
                             <select class="" id="exampleFormControlSelect1">
                                 <option disabled selected hidden>Where to you want to go?</option>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
+                                <option>India</option>
+                                <option>America</option>
+                                <option>Africa</option>
+                                <option>Russia</option>
+                                <option>Albania</option>
                             </select>
                         </div>
                         <div id="form-group" class="form-group">
@@ -388,7 +388,6 @@
     </div>
 
     <!-- Services -->
-    <!-- Packages -->
     <div id="service-section" class="container">
         <div id="service-head">
             <p id="service-line"></p>
