packages names updated

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <img src="images/package-4-russia.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Russia</h5>
-                        <p class="card-text">Switzerland is known for its natural beauty, including mountains,
+                        <p class="card-text">Russia is known for its natural beauty, including mountains,
                             lakes,
                             and valleys. It's also known for its rich
                             history, clocks, and food.</p>
@@ -285,7 +285,7 @@
                     <img src="images/package-5-america.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">America</h5>
-                        <p class="card-text">Switzerland is known for its natural beauty, including mountains,
+                        <p class="card-text">America is known for its natural beauty, including mountains,
                             lakes,
                             and valleys. It's also known for its rich
                             history, clocks, and food.</p>
@@ -310,7 +310,7 @@
                     <img src="images/package-6-africa.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Africa</h5>
-                        <p class="card-text">Switzerland is known for its natural beauty, including mountains,
+                        <p class="card-text">Africa is known for its natural beauty, including mountains,
                             lakes,
                             and valleys. It's also known for its rich
                             history, clocks, and food.</p>
@@ -335,7 +335,7 @@
                     <img src="images/package-7-albania.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Albannia</h5>
-                        <p class="card-text">Switzerland is known for its natural beauty, including mountains,
+                        <p class="card-text">Albannia is known for its natural beauty, including mountains,
                             lakes,
                             and valleys. It's also known for its rich
                             history, clocks, and food.</p>
@@ -360,7 +360,7 @@
                     <img src="images/package-8-dubai.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Dubai</h5>
-                        <p class="card-text">Switzerland is known for its natural beauty, including mountains,
+                        <p class="card-text">Dubai is known for its natural beauty, including mountains,
                             lakes,
                             and valleys. It's also known for its rich
                             history, clocks, and food.</p>
@@ -385,7 +385,7 @@
                     <img src="images/package-9-australia.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Australia</h5>
-                        <p class="card-text">Switzerland is known for its natural beauty, including mountains,
+                        <p class="card-text">Australia is known for its natural beauty, including mountains,
                             lakes,
                             and valleys. It's also known for its rich
                             history, clocks, and food.</p>
