--- a/index.html
+++ b/index.html
@@ -466,6 +466,54 @@
         </div>
     </div>
 
+    <!-- gallery -->
+
+    <div id="gallery-section" class="container">
+        <div id="gallery-head">
+            <p id="gallery-line"></p>
+            <div id="gallery-heading">
+                <h2>Gallery</h2>
+            </div>
+        </div>
+
+        <div class="gallery-images">
+            <!-- <div class="row"> -->
+            <!-- <div class="col-sm-8 col-md-6 col-lg-4" id="gallery-cards"> -->
+            <div id="gallery-cards">
+                <div class="galleryImages gallery-image1">
+                    <img src="images/package-2-India.jpg" alt="">
+
+                    <div id="gallery-desc">
+                        <p>India</p>
+                    </div>
+                </div>
+                <div class="galleryImages gallery-image2">
+                    <img src="images/package-5-america.jpg" alt="">
+
+                    <div id="gallery-desc">
+                        <p>America</p>
+                    </div>
+                </div>
+                <div class="galleryImages gallery-image3">
+                    <img src="images/package-8-dubai.jpg" alt="">
+
+                    <div id="gallery-desc">
+                        <p>Dubai</p>
+                    </div>
+                </div>
+                <div class="galleryImages gallery-image4">
+                    <img src="images/package-3-switz.jpg" alt="">
+
+                    <div id="gallery-desc">
+                        <p>Switzerland</p>
+                    </div>
+                </div>
+            </div>
+            <!-- </div> -->
+            <!-- </div> -->
+        </div>
+    </div>
+
     <!-- cdn links for Bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
