about us, footer

--- a/index.html
+++ b/index.html
@@ -467,7 +467,6 @@
     </div>
 
     <!-- gallery -->
-
     <div id="gallery-section" class="container">
         <div id="gallery-head">
             <p id="gallery-line"></p>
@@ -511,6 +510,69 @@
             </div>
             <!-- </div> -->
             <!-- </div> -->
+        </div>
+    </div>
+
+    <!-- About us -->
+    <div id="about-us-section" class="container">
+        <div id="about-us-head">
+            <p id="about-us-line"></p>
+            <div id="about-us-heading">
+                <h2>About us</h2>
+            </div>
+        </div>
+
+        <div id="about-us-rows">
+            <div id="about-us" class=" pt-5">
+                <!-- <div class="col-sm-12"> -->
+                <div class="w-100">
+                    <img src="images/FT_logo-removebg-preview-original.png" alt="">
+                </div>
+                <div id="about-description" class="w-100">
+                    <p>
+                        Footstep Travels is a travel company specializing in organising tailor made group tours for
+                        business and leis. We are a company specialized in organizing a special tour packages for
+                        the
+                        people who is willing to travel across the world. We are the promising company to the people
+                        who
+                        trust us in every manner.
+                    </p>
+
+                    <p>
+                        We have all kind of pre packages and customized packages for our customers. Our team is made
+                        up
+                        of experienced travelers who
+                        10 years of experience, 500+ satisfied clients and we are still growing! We specialize in
+                        organizing group. We are a company that offers you the best services for your vacation, we
+                        have
+                        been working since
+                        2022.
+                    </p>
+                </div>
+                <!-- </div> -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer-section">
+        <!-- Brand logo and social links -->
+        <div class="brand-social">
+            <div>
+                <a class="navbar-brand" href="#"><span class="footstep-brand">FootStep</span> <span
+                        class="travels">Travels</span></a>
+            </div>
+            <div class="social-links">
+                <i class="fa-brands fa-facebook fa-2xl"></i>
+                <i class="fa-brands fa-instagram fa-2xl"></i>
+                <i class="fa-brands fa-linkedin-in fa-2xl"></i>
+            </div>
+
+        </div>
+
+        <!-- Copyrights -->
+        <div class="copyrights">
+            <p>Copyrights @2024 | All rights reserved.</p>
         </div>
     </div>
 
