--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <link rel="icon" type="image/x-icon" href="images/Dreamland-logos-removebg-preview.png">
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+
     <!-- cdn links for Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -32,7 +36,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
 
     <!-- External javascript -->
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 
     <!-- External CSS -->
     <link rel="stylesheet" href="css/index.css">
@@ -83,8 +87,12 @@
                     </li>
                 </ul>
                 <div class="nav-right login-buttons">
-                    <button class="btn btn-outline-success login" type="submit">Login</button>
-                    <button class="btn btn-outline-success register" type="submit">Register</button>
+                    <button class="btn btn-outline-success login" type="button" data-bs-toggle="modal"
+                        data-bs-target="#loginModal">Login</button>
+                    <!-- <a href="signup.html"> -->
+                    <button class="btn btn-outline-success register" data-bs-toggle="modal"
+                        data-bs-target="#registerModal">Register</button>
+                    <!-- </a> -->
                 </div>
             </div>
         </div>
@@ -573,6 +581,109 @@
         <!-- Copyrights -->
         <div class="copyrights">
             <p>Copyrights @2024 | All rights reserved.</p>
+        </div>
+    </div>
+
+    <!-- Register Modal -->
+    <div class="modal fade" id="registerModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="registerModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content registration-modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="registerModalLabel">Register</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Register form -->
+                    <form id="registerForm">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="fullName">Full Name</label>
+                                    <input type="text" class="form-control" id="fullName"
+                                        placeholder="Enter first name">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="email">Email address</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Enter email">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="password">Password</label>
+                                    <input type="password" class="form-control" id="password" placeholder="Password">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="contact">Contact</label>
+                                    <input type="text" class="form-control" id="contact"
+                                        placeholder="Enter contact number">
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="dob">Date of Birth</label>
+                                    <input type="date" class="form-control" id="dob">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="gender">Gender</label>
+                                    <select class="form-control" id="gender">
+                                        <option value="male">Male</option>
+                                        <option value="female">Female</option>
+                                        <option value="Prefer not to say">Prefer not to say</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Add more rows with fields as needed -->
+
+                        <button type="submit" class="btn btn-primary" id="reg-button">Register</button>
+                        <!-- Link to login page -->
+                        <p class="pt-2">Already have an account? <a href="#" id="loginLink" data-bs-toggle="modal"
+                                data-bs-target="#loginModal">Login</a></p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Login Modal -->
+    <div class="modal fade" id="loginModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="loginModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content login-modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="registerModalLabel">Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Login form -->
+                    <form id="loginForm">
+                        <div class="form-group">
+                            <label for="email-id">Email address</label>
+                            <input type="email" class="form-control" id="email-id" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="password-id">Password</label>
+                            <input type="password" class="form-control" id="password-id" placeholder="Password">
+                        </div>
+                        <button type="submit" class="btn btn-primary" id="login-button">Login</button>
+                        <!-- Link to register page -->
+                        <p class="pt-2">Don't have an account? <a href="#" id="signupLink" data-bs-toggle="modal"
+                                data-bs-target="#registerModal">Register here</a></p>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
