--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Book</a>
+                        <a class="nav-link" href="#book-now-section">Book</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#packages-section" id="navbarDropdown" role="button"
@@ -72,9 +72,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#packages-section">United State</a></li>
-                            <li><a class="dropdown-item" href="#">India</a></li>
-                            <li><a class="dropdown-item" href="#">France</a></li>
-                            <li><a class="dropdown-item" href="#">Germany</a></li>
+                            <li><a class="dropdown-item" href="#packages-section">India</a></li>
+                            <li><a class="dropdown-item" href="#packages-section">France</a></li>
+                            <li><a class="dropdown-item" href="#packages-section">Germany</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
